# Lambda_FinanceAnalyzer

./: MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
analysis/: hierarchical.py  pairwise.py
core/: config.py  jit_functions.py  structural_tensor.py
lambda3/: __init__.py  version.py
lambda3-analytics/: .dockerignore  .gitignore  Makefile  QUICKSTART.md  README.md  setup.py
lambda3-analytics/config/: default_config.yaml  gcp_config.yaml  logging_config.yaml
lambda3-analytics/data/: .gitkeep
lambda3-analytics/docker/: .env.example  Dockerfile  Dockerfile.dev  Dockerfile.worker  docker-compose.yml
lambda3-analytics/requirements/: base.txt  dev.txt  gcp.txt  test.txt
lambda3-analytics/scripts/: deploy_to_gcs.sh  launch_ultimate_analysis.py  run_local_demo.py  setup_gcp_project.py
lambda3-analytics/src/: __init__.py
lambda3-analytics/src/cloud/: __init__.py  lambda3_cloud_parallel.py  lambda3_cloud_worker.py  lambda3_gcp_ultimate.py  lambda3_result_aggregator.py
lambda3-analytics/src/core/: __init__.py  lambda3_regime_aware_extension.py
lambda3-analytics/src/utils/: __init__.py  data_loader.py
lambda3-analytics/tests/: __init__.py  test_cloud_parallel.py  test_core.py  test_regime_detection.py
lambda3/analysis/: __init__.py  hierarchical.py  pairwise.py
lambda3/core/: __init__.py  config.py  jit_functions.py  structural_tensor.py  types.py
lambda3/data/: README.md  __init__.py  acquisition.py
lambda3/pipelines/: __init__.py  comprehensive.py
lambda3/utils/: __init__.py  helpers.py
lambda3/visualization/: __init__.py  base.py
lamda3_gcp/: lambda3_cloud_worker.py  requirements_gcp.txt
pipelines/: comprehensive.py
visualization/: base.py
