# ==========================================================
# pyproject.toml - Lambda³ Finance Analyzer Configuration
# 
# Author: Masamichi Iizumi (Miosync, Inc.)  
# License: MIT
#
# プロジェクトナレッジの実際のコードに基づく設定
# ==========================================================

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel>=0.37.0",
    "numpy>=1.21.0",  # ビルド時にNumPyが必要（JIT最適化用）
]
build-backend = "setuptools.build_meta"

[project]
name = "lambda3"
version = "0.2.0"  # lambda3/__init__.pyより
description = "Lambda³ Theory: Advanced Financial Analysis with Structural Tensors and JIT Optimization"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Masamichi Iizumi", email = "m.iizumi@miosync.email"},
]
maintainers = [
    {name = "Miosync Research Team", email = "info@miosync.email"},
]
keywords = [
    "finance",
    "quantitative-finance", 
    "time-series-analysis",
    "structural-tensors",
    "lambda3-theory",
    "jit-optimization",
    "bayesian-analysis",
    "crisis-detection",
    "market-analysis",
    "numba",
]

classifiers = [
    # 開発状況
    "Development Status :: 3 - Alpha",
    
    # 対象ユーザー
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research", 
    "Intended Audience :: Developers",
    
    # トピック
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    
    # ライセンス
    "License :: OSI Approved :: MIT License",
    
    # Python バージョン
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    
    # OS
    "Operating System :: OS Independent",
]

requires-python = ">=3.8"

dependencies = [
    # requirements.txtの必須依存関係
    "numpy>=1.21.0,<2.0.0",
    "scipy>=1.7.0,<2.0.0", 
    "pandas>=1.3.0,<3.0.0",
    "numba>=0.56.0,<1.0.0",
    "matplotlib>=3.5.0,<4.0.0",
    "seaborn>=0.11.0,<1.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
# requirements.txtから実際に存在する依存関係のみ
bayesian = [
    "pymc>=5.0.0,<6.0.0",
    "arviz>=0.14.0,<1.0.0", 
    "theano-pymc>=1.1.0,<2.0.0",
    "statsmodels>=0.13.0,<1.0.0",
]

financial = [
    "yfinance>=0.2.0,<1.0.0",
    "pandas-datareader>=0.10.0,<1.0.0",
    "quandl>=3.7.0,<4.0.0",
    "alpha-vantage>=2.3.0,<3.0.0",
    "fredapi>=0.5.0,<1.0.0",
]

visualization = [
    "plotly>=5.0.0,<6.0.0",
    "dash>=2.0.0,<3.0.0",
    "bokeh>=2.4.0,<4.0.0", 
    "ipywidgets>=7.6.0,<9.0.0",
]

network = [
    "networkx>=2.6.0,<4.0.0",
    "igraph>=0.9.0,<1.0.0",
]

ml = [
    "scikit-learn>=1.0.0,<2.0.0",
    "sktime>=0.15.0,<1.0.0",
    "pmdarima>=2.0.0,<3.0.0",
]

dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-benchmark>=4.0.0,<5.0.0",
    "black>=22.0.0,<25.0.0",
    "flake8>=4.0.0,<8.0.0",
    "mypy>=0.950,<2.0.0",
    "isort>=5.10.0,<6.0.0",
    "pre-commit>=2.20.0,<4.0.0",
]

jupyter = [
    "jupyter>=1.0.0",
    "jupyterlab>=3.4.0,<5.0.0",
    "notebook>=6.4.0,<8.0.0",
    "ipywidgets>=7.6.0,<9.0.0",
]

# 完全インストール
complete = [
    "lambda3[bayesian,financial,visualization,network,ml,jupyter]"
]

[project.urls]
Homepage = "https://github.com/miosync-masa/Lambda_FinanceAnalyzer"
Repository = "https://github.com/miosync-masa/Lambda_FinanceAnalyzer"
"Bug Tracker" = "https://github.com/miosync-masa/Lambda_FinanceAnalyzer/issues"
Discussions = "https://github.com/miosync-masa/Lambda_FinanceAnalyzer/discussions"

# ==========================================================
# SETUPTOOLS CONFIGURATION
# ==========================================================

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["lambda3*"]
exclude = ["tests*", "docs*", "examples*", "scripts*"]

[tool.setuptools.package-data]
lambda3 = [
    "*.txt",
    "*.md", 
    "*.yml",
    "*.yaml",
    "*.json",
    "data/**/*",
    "configs/**/*",
]

# ==========================================================
# DEVELOPMENT TOOLS CONFIGURATION
# ==========================================================

# Black コードフォーマッター
[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = "\\.pyi?$"

# isort インポート整理
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["lambda3"]

# MyPy 静的型検査
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "numba.*",
    "pymc.*", 
    "arviz.*",
    "yfinance.*",
    "pandas_datareader.*",
    "plotly.*",
    "networkx.*",
    "sklearn.*",
]
ignore_missing_imports = true

# Pytest テスト設定（将来のテスト実装時用）
# [tool.pytest.ini_options]
# minversion = "7.0"
# addopts = [
#     "-ra",
#     "--strict-markers",
# ]
# testpaths = ["tests"]

# Coverage 設定（将来のテスト実装時用）
# [tool.coverage.run]
# source = ["lambda3"]
# branch = true
